PA_Education/TestMenifest/force-app/main/default/objects/Education__c/Education__c.object-meta.xml
<CustomObject>
    <label>Education</label>
    <nameField>
        <displayFormat>ED-{000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>