PA_Education/TestMenifest/force-app/main/default/objects/Education__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Begginer</fullName>
                <default>true</default>
                <label>Beginner</label>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>