PA_Education/TestMenifest/force-app/main/default/objects/Education__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>제목</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>