PA_Education/TestMenifest/force-app/main/default/objects/Education__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>교육강사</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EducationUser</relationshipName>
    <type>Lookup</type>
</CustomField>