PA_Education/TestMenifest/force-app/main/default/objects/Education__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>관련분야</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>ALL</label>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Dev.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>