PA_Education/TestMenifest/force-app/main/default/objects/Education__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Grade__c</columns>
    <columns>Subject__c</columns>
    <columns>Teacher__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>